tests/baselines/reference/parserSwitchStatement1.d.errors.txt
parserSwitchStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserSwitchStatement1.d.ts(1,9): error TS2304: Cannot find name 'foo'.


==== parserSwitchStatement1.d.ts (2 errors) ====
    switch (foo) {
    ~~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
            ~~~
!!! error TS2304: Cannot find name 'foo'.
    }